--- a/src/mainboard/opus/m4/Kconfig
+++ b/src/mainboard/opus/m4/Kconfig
@@ -1,5 +1,5 @@
-config BOARD_TYAN_S2895
-	bool "S2895 (Thunder K8WE)"
+config BOARD_OPUS_M4
+	bool "M4"
 	select ARCH_X86
 	select CPU_AMD_SOCKET_940
 	select NORTHBRIDGE_AMD_AMDK8
@@ -15,90 +15,90 @@ config BOARD_TYAN_S2895
 
 config MAINBOARD_DIR
 	string
-	default tyan/s2895
-	depends on BOARD_TYAN_S2895
+	default opus/m4
+	depends on BOARD_OPUS_M4
 
 config APIC_ID_OFFSET
 	hex
 	default 0x10
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config SB_HT_CHAIN_ON_BUS0
 	int
 	default 2
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config LB_CKS_RANGE_END
 	int
 	default 122
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config LB_CKS_LOC
 	int
         default 123
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config MAINBOARD_PART_NUMBER
 	string
-	default "S2895"
-	depends on BOARD_TYAN_S2895
+	default "M4"
+	depends on BOARD_OPUS_M4
 
 config MAINBOARD_PCI_SUBSYSTEM_DEVICE_ID
 	hex
 	default 0x2895
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config HW_MEM_HOLE_SIZEK
 	hex
 	default 0x100000
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config MAX_CPUS
 	int
 	default 4
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config MAX_PHYSICAL_CPUS
 	int
 	default 2
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config HW_MEM_HOLE_SIZE_AUTO_INC
 	bool
 	default n
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config HT_CHAIN_UNITID_BASE
 	hex
 	default 0
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config HT_CHAIN_END_UNITID_BASE
 	hex
 	default 0x20
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config USE_INIT
 	bool
 	default n
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config WAIT_BEFORE_CPUS_INIT
 	bool
 	default n
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config SB_HT_CHAIN_ON_BUS0
 	int
 	default 2
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config SB_HT_CHAIN_UNITID_OFFSET_ONLY
 	bool
 	default n
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
 
 config IRQ_SLOT_COUNT
 	int
 	default 11
-	depends on BOARD_TYAN_S2895
+	depends on BOARD_OPUS_M4
