--- a/src/mainboard/opus/m4/Kconfig
+++ b/src/mainboard/opus/m4/Kconfig
@@ -5,13 +5,12 @@ config BOARD_OPUS_M4
 	select NORTHBRIDGE_AMD_AMDK8
 	select NORTHBRIDGE_AMD_AMDK8_ROOT_COMPLEX
 	select SOUTHBRIDGE_NVIDIA_CK804
-	select SOUTHBRIDGE_AMD_AMD8131
-	select SUPERIO_SMSC_LPC47B397
+	select SUPERIO_SMSC_SMSCSUPERIO
 	select HAVE_PIRQ_TABLE
 	select HAVE_MP_TABLE
 	select SERIAL_CPU_INIT
 	select HAVE_ACPI_TABLES
-	select BOARD_ROMSIZE_KB_1024
+	select BOARD_ROMSIZE_KB_512
 
 config MAINBOARD_DIR
 	string
