Apply changes from r5653

--- a/src/mainboard/opus/m4/Kconfig
+++ b/src/mainboard/opus/m4/Kconfig
@@ -6,8 +6,9 @@ config BOARD_OPUS_M4
 	select NORTHBRIDGE_AMD_AMDK8_ROOT_COMPLEX
 	select SOUTHBRIDGE_NVIDIA_CK804
 	select SUPERIO_SMSC_SMSCSUPERIO
-        select HAVE_HARD_RESET
-        select HAVE_BUS_CONFIG
+	select HAVE_HARD_RESET
+	select HAVE_BUS_CONFIG
+	select HAVE_OPTION_TABLE
 	select HAVE_PIRQ_TABLE
 	select HAVE_MP_TABLE
 	select SERIAL_CPU_INIT
