--- a/src/mainboard/opus/m4/Kconfig
+++ b/src/mainboard/opus/m4/Kconfig
@@ -49,6 +49,10 @@ config HT_CHAIN_END_UNITID_BASE
 	hex
 	default 0x20
 
+config CK804_NUM
+	int
+	default 2
+
 config SB_HT_CHAIN_ON_BUS0
 	int
 	default 2
