--- a/src/mainboard/opus/m4/Kconfig
+++ b/src/mainboard/opus/m4/Kconfig
@@ -16,6 +16,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select SERIAL_CPU_INIT
 	select HAVE_ACPI_TABLES
 	select BOARD_ROMSIZE_KB_512
+        select QRANK_DIMM_SUPPORT
 
 config MAINBOARD_DIR
 	string
