--- a/src/mainboard/opus/m4/Kconfig
+++ b/src/mainboard/opus/m4/Kconfig
@@ -17,6 +17,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select HAVE_ACPI_TABLES
 	select BOARD_ROMSIZE_KB_512
         select QRANK_DIMM_SUPPORT
+        select K8_ALLOCATE_IO_RANGE
 
 config MAINBOARD_DIR
 	string
