--- a/src/mainboard/opus/m4/Kconfig
+++ b/src/mainboard/opus/m4/Kconfig
@@ -1,23 +1,23 @@
 if BOARD_OPUS_M4
 
 config BOARD_SPECIFIC_OPTIONS # dummy
-	def_bool = y
+	def_bool y
 	select ARCH_X86
 	select CPU_AMD_SOCKET_940
 	select NORTHBRIDGE_AMD_AMDK8
 	select NORTHBRIDGE_AMD_AMDK8_ROOT_COMPLEX
 	select SOUTHBRIDGE_NVIDIA_CK804
 	select SUPERIO_SMSC_SMSCSUPERIO
-	select HAVE_HARD_RESET
 	select HAVE_BUS_CONFIG
 	select HAVE_OPTION_TABLE
+	select HAVE_HARD_RESET
 	select HAVE_PIRQ_TABLE
 	select HAVE_MP_TABLE
 	select SERIAL_CPU_INIT
 	select HAVE_ACPI_TABLES
 	select BOARD_ROMSIZE_KB_512
-        select QRANK_DIMM_SUPPORT
-        select K8_ALLOCATE_IO_RANGE
+	select QRANK_DIMM_SUPPORT
+	select K8_ALLOCATE_IO_RANGE
 
 config MAINBOARD_DIR
 	string
@@ -26,6 +26,10 @@ config MAINBOARD_DIR
 config APIC_ID_OFFSET
 	hex
 	default 0x10
+
+config CK804_NUM
+	int
+	default 2
 
 config SB_HT_CHAIN_ON_BUS0
 	int
@@ -50,10 +54,6 @@ config HT_CHAIN_UNITID_BASE
 config HT_CHAIN_END_UNITID_BASE
 	hex
 	default 0x20
-
-config CK804_NUM
-	int
-	default 2
 
 config SB_HT_CHAIN_ON_BUS0
 	int
